# memory-visualizer

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  cachesim.cpp  cachesim.h  compile_flags.txt  core.cpp  core.h  cpu.cpp  cpu.h  cpu_callback.cpp  cpu_callback.h  event.cpp  event.h  main.cpp  mem_trace_pass.cpp  memory.cpp  memory.h  os.cpp  os.h  plru.h  renderer.cpp  renderer.h  types.h  uncore.cpp  uncore.h  visualizer_main.cpp
benchmarks/: col_major.c  false_sharing.cpp  false_sharing_padded.cpp  producer_consumer.cpp  row_major.c
example_code/: row_major.c
